pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingEmptyStringDelimiterAtEof.pkl
// No newline after opening quote.
// Would like to provide the usual "missing end delimiter" message,
// but adding EOF alternative to END_QUOTE rule didn't have any effect.
res1 = "